@@ -9,7 +9,9 @@
 
 #include "festring.h"
 
-/* HIGH_SCORE_FILENAME defined in configure.in in Linux */
+#ifdef LINUX
+#define HIGH_SCORE_FILENAME LOCAL_STATE_DIR "/ivan-highscore.scores"
+#endif
 
 #if (defined(WIN32) || defined(__DJGPP__)) && !defined(HIGH_SCORE_FILENAME)
 #define HIGH_SCORE_FILENAME CONST_S("HScore.dat")
