@@ -16,8 +16,7 @@ AM_PATH_SDL($SDL_VERSION,
 
 CFLAGS="$CFLAGS $SDL_CFLAGS "
 LIBS="$LIBS $SDL_LIBS"
-
-CPPFLAGS="$SDL_CFLAGS -DLINUX -DHIGH_SCORE_FILENAME=\\\"@localstatedir@/ivan-highscore.scores\\\" -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
+CPPFLAGS="$SDL_CFLAGS -DLINUX -DLOCAL_STATE_DIR=\\\"@localstatedir@/ivan/\\\" -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
 
 AC_PROG_INSTALL
 
